--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -6,17 +6,23 @@
 		list-style-type: none;
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
-		align-items: flex-end;
+		justify-content: space-evenly;
 		padding: 0;
+		margin: 0;
+		height: 50px;
 		li {	
 			padding: 10px;
 			background: $color-main-bg;
-			align-self: stretch;
-			display: inline-block;
-			height: auto;
+			align-self: flex-end;
+			height: 50px;
+			line-height: 30px;
+			}
+			span {
+				vertical-align: middle;
 			}
 		input {
+			height: 30px;
+			align-self: center;
 		}
 	}
 }
